--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background: linear-gradient(90deg, rgb(16, 8, 58) 0%, rgb(32, 51, 114)100%);
+    background: linear-gradient(90deg, rgb(16, 8, 58) 0%, rgb(12, 16, 29)100%);
     color: #00e5ff;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -80,13 +80,13 @@ a:hover {
 }
 
 a.current, a.current:visited {
-    color: #adc8cc;
+    color: #adccc0;
     transition: font-size 0.5s ease, color 0.5s ease;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 135%;
 }
 
 a.current:hover {
-    color: #c6cecf;
+    color: #c6cfcc;
     font-size: 155%;
 }
