--- a/style.css
+++ b/style.css
@@ -73,20 +73,16 @@ a, a:visited {
     text-decoration: none;
 }
 
-a:hover {
+a.current:hover, a:hover {
     color: #aac9cd;
     font-size: 155%;
 
 }
 
 a.current, a.current:visited {
-    color: #adccc0;
+    color: #66a2be;
     transition: font-size 0.5s ease, color 0.5s ease;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 135%;
-}
-
-a.current:hover {
-    color: #c6cfcc;
-    font-size: 155%;
+    text-decoration: underline;
 }
