--- a/style.css
+++ b/style.css
@@ -52,11 +52,25 @@ h1, h2, h3, h4, h5
     color: #93d9ff76;
     padding: 2px;
     margin: 2px;
-    font-size: 200%;
     text-shadow: 0 4px 8px rgba(0,0,0,0.45);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
- 
+
+h1
+{
+    font-size: 200%;
+}
+
+h2
+{
+    font-size: 170%;
+}
+
+h3
+{
+    font-size: 150%;
+}
+
 p
 {
     padding: 2px;
