--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
+/* Elements */
 body{
     background: linear-gradient(90deg, rgb(16, 8, 58) 0%, rgb(12, 16, 29)100%);
     color: #00e5ff;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 
 header
 {
@@ -18,7 +17,6 @@ header
     padding: 10px 0;
     left: -8px;
     top: -10px;
-    height: 90px;
 }
 
 nav
@@ -44,6 +42,7 @@ article
 {
     background-color: #293778af;
 }
+
 h1, h2, h3, h4, h5
 {
     color: #93d9ff76;
@@ -76,14 +75,6 @@ p
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-
-#mainPage, #mainPage:visited, #mainPage:hover
-{
-    color: #93d9ff76;
-    font-size:220%;
-    font-weight: bold;
-}
-
 a, a:visited {
     color: #66a2be;
     transition: font-size 0.5s ease, color 0.5s ease;
@@ -93,10 +84,18 @@ a, a:visited {
     text-decoration: none;
 }
 
-a.current:hover, a:hover {
+a:hover {
     color: #aac9cd;
     font-size: 155%;
 
+}
+
+/* IDs */
+#mainPage, #mainPage:visited, #mainPage:hover
+{
+    color: #93d9ff76;
+    font-size:520%;
+    font-weight: bold;
 }
 
 a.current, a.current:visited {
@@ -106,6 +105,11 @@ a.current, a.current:visited {
     text-shadow: 0 4px 8px rgba(0,0,0,0.35);
     font-size: 135%;
     text-decoration: underline;
+}
+
+a.current:hover {
+    color: #aac9cd;
+    font-size: 155%;
 }
 
 .gallery
