--- a/BootstrapCSS/bootstrap.css
+++ b/BootstrapCSS/bootstrap.css
@@ -103,7 +103,7 @@
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 5px;
   --bs-border-style: solid;
-  --bs-border-color: #0f3b67;
+  --bs-border-color: #030b13;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
