--- a/BootstrapCSS/bootstrap.css
+++ b/BootstrapCSS/bootstrap.css
@@ -29,8 +29,8 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
+  --bs-primary: #08172d;
+  --bs-secondary: #2c5578;
   --bs-success: #198754;
   --bs-info: #06323a;
   --bs-warning: #ffc107;
@@ -82,7 +82,7 @@
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg: #0a182b;
   --bs-body-bg-rgb: 160, 160, 255;
-  --bs-emphasis-color: #4d62a8;
+  --bs-emphasis-color: #4a516d;
   --bs-emphasis-color-rgb: 40, 40, 170;
   --bs-secondary-color: rgba(33, 37, 41, 0.75);
   --bs-secondary-color-rgb: 33, 37, 41;
