--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 /* Elements */
 body{
     background: linear-gradient(90deg, rgb(16, 8, 58) 0%, rgb(12, 16, 29)100%);
-    color: #00e5ff;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+html
+{
+    margin: 0px;
+    padding: 0px;
 }
 
 header
 {
-    background-color: #070b1baf;
     color: #81abb8a8;
     width: 101vw;
     margin: 0px;
@@ -17,18 +23,6 @@ header
     padding: 10px 0;
     left: -8px;
     top: -10px;
-}
-
-nav
-{
-    background-color: #09105d97;
-    height: 45px;
-    width: 100%;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
 }
 
 section
@@ -73,40 +67,6 @@ p
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-a, a:visited {
-    color: #66a2be;
-    transition: font-size 0.5s ease, color 0.5s ease;
-    font-size: 135%;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #aac9cd;
-    font-size: 155%;
-
-}
-
-/* IDs */
-#mainPage, #mainPage:visited, #mainPage:hover
-{
-    color: #93d9ff76;
-    font-size:520%;
-    font-weight: bold;
-}
-
-a.current, a.current:visited {
-    color: #66a2be;
-    transition: font-size 0.5s ease, color 0.5s ease;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 135%;
-    text-decoration: underline;
-}
-
-a.current:hover {
-    color: #aac9cd;
-    font-size: 155%;
-}
 
 .gallery
 {
@@ -132,4 +92,3 @@ a.current:hover {
 {
     transform: scale(1.05);
 }
-
