--- a/override.css
+++ b/override.css
@@ -3,11 +3,9 @@
 {
     --bs-primary: #020913;
     --bs-secondary: #071e31;
-    --bs-primary-rgb: rgb(11, 15, 30);
-    --bs-secondary-rgb: rgb(11, 12, 96);
+    --bs-primary-rgb: 11, 15, 30;
+    --bs-secondary-rgb: 2, 3, 30;
     --bs-gradient: linear-gradient(180deg, rgba(21, 28, 51, 0.692), rgba(0, 0, 0, 0.454));
-    --bs-dark-rgb: rgb(10, 11, 90);
-    --bg-nat: rgb(4, 10, 74);
 }
 
 .navbar .nav-link {
