--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@ header
     top: -10px;
 }
 
+
+footer
+{
+    background-color: #386c96;
+    color: #00fff2;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+    font-size: 90%;
+}
+
 section
 {
     padding: 5px;
