--- a/style.css
+++ b/style.css
@@ -1,41 +1,20 @@
 /* Elements */
 body{
-   /* background: linear-gradient(90deg, rgb(101, 88, 166) 0%, rgb(82, 108, 194)100%);*/
-   background-color: #2c030a;
+   background-color: rgb(220, 220, 220);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    color:#d8d9de;
+    color:#28282B;
 }
 
 main {
   flex: 1;
 }
 
-html, body
-{
-    height: 100%;
-    margin: 0;
-}
-
-header
-{
-    color: #11313b5c;
-    width: 101vw;
-    margin: 0px;
-    left: 0;
-    position: relative;
-    text-align: center;
-    padding: 10px 0;
-    left: -8px;
-    top: -10px;
-}
-
-
 footer
 {
-    background-color: #240308;
+    background-color: #777777;
     color: #00fff2;
     text-align: center;
     padding: 35px 0;
@@ -44,45 +23,20 @@ footer
     
 }
 
-section
-{
-    padding: 5px;
-}
-
-article
-{
-    background-color: #293778af;
-}
-
-h1, h2, h3, h4, h5
-{
-    color: #ebeeef;
-    padding: 2px;
-    margin: 2px;
-    text-shadow: 0 4px 8px rgba(0,0,0,0.45);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
 h1
 {
-    font-size: 300%;
+    font-size: 375%;
 }
 
 h2
 {
-    font-size: 170%;
+    font-size: 250%;
 }
-
-h3
-{
-    font-size: 150%;
-}
-
 p
 {
     padding: 2px;
     font-size: 155%;
-    color:#d8d9de;
+    color:rgb(40, 40, 43);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -125,7 +79,7 @@ transform: scale(1.03)
 #header
 {
     color: rgb(255, 255, 254);
-    font-size: 1050%;
+    font-size: 550%;
     position: relative;
 }
 
@@ -137,4 +91,35 @@ transform: scale(1.03)
 #title
 {
     background-color: #200308;
+}
+
+.height-xxl
+{
+    height: 600px;
+}
+
+.height-lg
+{
+    height: 450px;
+}
+
+.height-sm
+{
+    height: 100px;
+}
+
+.height-sm-md
+{
+    height:175px;
+}
+
+.height-md
+{
+    height: 325px;
+}
+
+.fit-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
